Cambio ubicacion en elemento after en navbar

--- a/sass/components/_navbar.scss
+++ b/sass/components/_navbar.scss
@@ -59,7 +59,7 @@
   
   .navbar__webstudio:hover::after {
     @include navbarBefore();
-    left: 175px;
+    left: 15%;
   }
   
   .navbar__link:hover::after{
