--- a/sass/components/_what-we-do.scss
+++ b/sass/components/_what-we-do.scss
@@ -5,9 +5,10 @@
 .what-we-do-list{
     display: flex;
     text-align: center;
+    justify-content: center;
     gap: 30px;
     margin-bottom: 94px;
-    padding: 55px 215px 0px 100px;
+    padding: 55px 86px 0px 86px;
     position: relative;
 
       /*A que nos dedicamos*/
