--- a/sass/main.scss
+++ b/sass/main.scss
@@ -17,6 +17,7 @@
     background-color: $primary-white-color;
     color: $primary-text-color;
     font-family: "Roboto", sans-serif;
+    width: 100%;
     font-style: normal;
     font-size: 14px;
     letter-spacing: 0.02em;
