--- a/sass/components/_customers.scss
+++ b/sass/components/_customers.scss
@@ -38,4 +38,20 @@
     fill: $main-color;
   }
   
-  
+  @media only screen and (min-width: 767.98px) and (max-width:1199.98px){
+
+    .customers__title{
+      padding-top: 60px;
+      padding-bottom: 30px;
+    }
+
+    .customers__list {
+      flex-wrap: wrap;
+      padding-bottom: 60px;
+    }
+
+    .customers__item  {
+      width: 226px;
+      height: 92px;
+    }
+    }
