--- a/sass/components/_navbar.scss
+++ b/sass/components/_navbar.scss
@@ -72,6 +72,14 @@
     margin-left: 20px;
   }
   
+  
+  @media only screen and (min-width: 767.98px) and (max-width:1199.98px){
+
+    .navbar-section{
+      flex-direction: column;
+      gap: 10px;
+    }
+  }
 
   
   
