--- a/sass/components/_portfolio-images.scss
+++ b/sass/components/_portfolio-images.scss
@@ -17,6 +17,7 @@
     gap: 30px;
     align-items: center;
     justify-content: center;
+    flex-wrap: wrap;
 
       /*Imagenes portafolio li*/
   &__list {
@@ -52,3 +53,27 @@
   
 }
   
+@media only screen and (min-width: 767.98px) and (max-width:1200.01px){
+
+  .main-portafolio-images{
+    padding: 0px 15px 30px 15px;
+  }
+  .portafolio-images__list{
+    width: 354px;
+  }
+
+  .portafolio-images__list img{
+    width: 354px;
+  }
+
+  .main-portafolio-images3{
+    margin-bottom: 30px;
+  }
+}
+
+@media only screen and (min-width: 767.98px) and (max-width:1199.98px){
+
+  .portafolio-images{
+    justify-content: flex-start;
+  }
+}
