--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,7 +7,7 @@
 *{
     padding: 0;
     margin: 0;
-    box-sizing: border-box;
+    box-sizing: border-box; //esto asegura que el relleno y el borde estan incluidos en el ancho total y altura de los elementos
     text-decoration: none;
     list-style: none;
   }
