--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -63,3 +63,78 @@ $border-form: rgba(33, 33, 33, 0.2);
     font-size: 14px;
     letter-spacing: 0.03em;
   }
+
+
+  @mixin contenedor(){
+    position: relative;
+    margin: auto;
+    width: 100%;
+    height: auto;
+  }
+
+  @mixin fila(){
+    position: relative;
+    margin: auto;
+    width: 100%;
+    height: auto;
+    /*Las columnas dentro de una fila estan flotando a la izquierda, y por tanto se toma fuera del flujo
+    de la pagina y otros elementos seran colocados como si no fueran de las columnas. Para evitar esto, 
+    vamos a añadir un estilo que despeja el flujo*/ 
+    clear: both;
+    display: table;
+  }
+
+  @mixin columnas-11(){
+    float: left;
+    width: 91.66666667%;
+  }
+  
+  @mixin columnas-10(){
+    float: left;
+    width: 83.33333333%;
+  }
+
+  @mixin columnas-9(){
+    float: left;
+    width: 75%;
+  }
+
+  @mixin columnas-8(){
+    float: left;
+    width: 66.66666667%;
+  }
+
+  @mixin columnas-7(){
+    float: left;
+    width: 58.33333333%;
+  }
+
+  @mixin columnas-6(){
+    float: left;
+    width: 50%;
+  }
+
+  @mixin columnas-5(){
+    float: left;
+    width: 41.66666667%;
+  }
+
+  @mixin columnas-4(){
+    float: left;
+    width: 33.33333333%;
+  }
+
+  @mixin columnas-3(){
+    float: left;
+    width: 25%;
+  }
+
+  @mixin columnas-2(){
+    float: left;
+    width: 16.66666667%;
+  }
+
+  @mixin columnas-1(){
+    float: left;
+    width: 8.33333333%;
+  }
