--- a/sass/components/_about-us.scss
+++ b/sass/components/_about-us.scss
@@ -111,3 +111,30 @@
     }
   }
   
+  @media only screen and (min-width: 479.98px) and (max-width:767.97px){
+
+
+    .about-us-list{
+      flex-wrap: wrap;
+      padding: 30px 15px 60px 15px;
+    }
+
+    .about-us__title{
+      padding-top: 60px;
+    }
+
+    .about-us-list__item{
+      width: 450px;
+    }
+
+    .about-us-list__item img{
+      width: 450px;
+    }
+
+    .about-us-list__svg{
+      gap: 10px;
+      padding-bottom: 30px;
+      padding-left: 122px;
+    }
+
+  }
