--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -100,4 +100,26 @@
     flex-wrap: wrap;
     text-align: center;
   }
+
+  .footer__webstudio span {
+    color: $primary-white-color;
+  }
 }
+
+    @media only screen and (min-width: 479.98px) and (max-width:767.97px){
+
+  
+      .footer{
+        flex-wrap: wrap;
+        text-align: center;
+      }
+
+      .footer-social-media{
+        padding-top: 60px;
+      }
+
+      .footer__webstudio span {
+        color: $primary-white-color;
+      }
+  
+    }
