--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -130,3 +130,48 @@
     fill: $main-color;
   }
   
+  @media only screen and (min-width: 767.98px) and (max-width:1199.98px){
+
+   
+    .backdrop__title {
+      width: 370px;
+      margin-left: 40px;
+    }
+
+    .form-modal__input{
+      width: 370px;
+      height: 40px;
+    }
+
+    .form-modal__textarea{
+      width: 370px;
+    }
+
+    .form-modal__button{
+      margin-left: 75px;
+      margin-top: 30px;
+    }
+  }
+
+  @media only screen and (min-width: 479.98px) and (max-width:767.97px){
+
+    .backdrop__title {
+      width: 370px;
+      margin-left: 40px;
+    }
+
+    .form-modal__input{
+      width: 370px;
+      height: 40px;
+    }
+
+    .form-modal__textarea{
+      width: 370px;
+    }
+
+    .form-modal__button{
+      margin-left: 75px;
+      margin-top: 30px;
+    }
+
+  }
