--- a/sass/components/_navbar.scss
+++ b/sass/components/_navbar.scss
@@ -72,12 +72,184 @@
     margin-left: 20px;
   }
   
+
+
+  // Menu movil
+
+  .menu-toggle {
+    min-height: 40px;
+    min-width: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   
+    margin: 0;
+    padding: 0;
+    background-color: transparent;
+    cursor: pointer;
+    border: none;
+    border-radius: 50%;
+    outline: none;
+
+    position: absolute;
+    top: 10px;
+    left: 89%;
+  }
+
+  .menu-toggle:hover,
+  .menu-toggle:focus {
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
+.menu-toggle:hover svg{
+  fill: $main-color;
+}
+
+.menu-toggle__x{
+  fill: $second-color;
+  cursor: pointer;
+}
+
+.menu-toggle__x:hover{
+  fill: $main-color;
+}
+
+.menu-container {
+  position: fixed;
+  top: 0;
+  left: 0;	
+  width: 100vw;
+  height: 100vh;
+  padding: 32px;
+  background-color: $primary-white-color;
+  z-index: 999;
+
+  transform: translateX(100%);
+  transition: transform 250ms ease-in-out;
+}
+
+.menu-container.is-open {
+  transform: translateX(0);
+}
+
+.menu-container .menu-toggle {
+  position: absolute;
+  top: 16px;
+  right: 16px;
+  color: #fff;
+}
+
+
+.mobile-menu{
+  padding: 48px 301px 226px 40px;
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+
+  &__link{
+    color: $second-color;
+    font-weight: 500;
+    font-size: 40px;
+    line-height: 47px;
+    letter-spacing: 0.02em;
+  }
+
+  &__link:hover{
+    color: $accent-color-hover;
+  }
+}
+
+.mobile-menu-item{
+  padding: 0px 57px 64px 40px;
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+
+  &__item1{
+    font-weight: 500;
+    font-size: 34px;
+    line-height: 40px;
+    letter-spacing: 0.02em;
+    color: $accent-color-hover;
+  }
+
+  &__item2{
+    color: $primary-text-color;
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 28px;
+    letter-spacing: 0.02em;
+  }
+}
+
+.mobile-menu-social-media{
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+  padding-left: 40px;
+
+
+  &__link{
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 22px;
+    letter-spacing: 0.02em;
+    color: $main-color;
+  }
+
+  span{
+    color: $primary-text-color;
+    font-size: 25px;
+  }
+}
+
+
+
+
+
   @media only screen and (min-width: 767.98px) and (max-width:1199.98px){
 
+    .navbar{
+      padding-top: 26px;
+      padding-bottom: 26px;
+    }
     .navbar-section{
       flex-direction: column;
       gap: 10px;
+    }
+
+    .navbar__webstudio span{
+      color: $black-1;
+    }
+  }
+
+  @media only screen and (min-width: 479.98px) and (max-width:767.97px){
+
+    .navbar{
+      padding-top: 16px;
+      margin-bottom: -16px;
+    }
+
+    .navbar__webstudio{
+      font-size: 24px;
+      position: absolute;
+      top: 16px;
+      left: 15px;
+    }
+
+    .navbar__webstudio span{
+      color: $black-1;
+    }
+    .navbar__link,
+    .navbar-section{
+      display: none;
+    }
+
+  }
+
+  @media (min-width: 767.98px) {
+    .menu-toggle {
+      display: none;
     }
   }
 
