--- a/sass/components/_what-we-do.scss
+++ b/sass/components/_what-we-do.scss
@@ -40,4 +40,12 @@
   }
   
   
+  @media only screen and (min-width: 479.98px) and (max-width:767.97px){
+
+    .what-we-do{
+      display: none;
+    }
+
+  }
+  
   
